src/test/test-models/bad/err-incr-log-prob-scope.stan
transformed parameters {
  real x;
  x <- 2.0;
  increment_log_prob(x);
}
model {
}
